native/sentinel.h

extern void RegisterPort(long long int port);
extern void UnregisterPort(void);
extern void BridgeInit(void* api);
extern void Move(int x, int y, long long int port);
extern void MoveRelative(int x, int y, long long int port);
extern void Click(char* btn, int dbl, long long int port);
extern void Toggle(char* btn, char* dir, long long int port);
extern void Scroll(int x, int y, long long int port);
extern void ScrollDir(int amount, char* dir, long long int port);
extern void GetLocation(long long int port);
extern void SetMouseSleep(int ms, long long int port);
extern void MilliSleep(int ms, long long int port);
extern void StopTask(long long int taskID, long long int port);
// ---- cancellable / long-running ops (return task id) ----
//
extern long long int MoveSmoothStart(int x, int y, long long int port);