lib/bindings/generated_bindings.dart


  late final _cacosfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('cacosf');
  late final _cacosf = _cacosfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex cacoshf(_Fcomplex _Z) {
    return _cacoshf(_Z);
  }

  late final _cacoshfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('cacoshf');
  late final _cacoshf = _cacoshfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  double cargf(_Fcomplex _Z) {
    return _cargf(_Z);
  }

  late final _cargfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(_Fcomplex)>>('cargf');
  late final _cargf = _cargfPtr.asFunction<double Function(_Fcomplex)>();

  _Fcomplex casinf(_Fcomplex _Z) {
    return _casinf(_Z);
  }

  late final _casinfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('casinf');
  late final _casinf = _casinfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex casinhf(_Fcomplex _Z) {
    return _casinhf(_Z);
  }

  late final _casinhfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('casinhf');
  late final _casinhf = _casinhfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex catanf(_Fcomplex _Z) {
    return _catanf(_Z);
  }

  late final _catanfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('catanf');
  late final _catanf = _catanfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex catanhf(_Fcomplex _Z) {
    return _catanhf(_Z);
  }

  late final _catanhfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('catanhf');
  late final _catanhf = _catanhfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex ccosf(_Fcomplex _Z) {
    return _ccosf(_Z);
  }

  late final _ccosfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('ccosf');
  late final _ccosf = _ccosfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex ccoshf(_Fcomplex _Z) {
    return _ccoshf(_Z);
  }

  late final _ccoshfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('ccoshf');
  late final _ccoshf = _ccoshfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex cexpf(_Fcomplex _Z) {
    return _cexpf(_Z);
  }

  late final _cexpfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('cexpf');
  late final _cexpf = _cexpfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  double cimagf(_Fcomplex _Z) {
    return _cimagf(_Z);
  }

  late final _cimagfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(_Fcomplex)>>('cimagf');
  late final _cimagf = _cimagfPtr.asFunction<double Function(_Fcomplex)>();

  _Fcomplex clogf(_Fcomplex _Z) {
    return _clogf(_Z);
  }

  late final _clogfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('clogf');
  late final _clogf = _clogfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex clog10f(_Fcomplex _Z) {
    return _clog10f(_Z);
  }

  late final _clog10fPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('clog10f');
  late final _clog10f = _clog10fPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex conjf(_Fcomplex _Z) {
    return _conjf(_Z);
  }

  late final _conjfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('conjf');
  late final _conjf = _conjfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex cpowf(_Fcomplex _X, _Fcomplex _Y) {
    return _cpowf(_X, _Y);
  }

  late final _cpowfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex, _Fcomplex)>>(
        'cpowf',
      );
  late final _cpowf = _cpowfPtr
      .asFunction<_Fcomplex Function(_Fcomplex, _Fcomplex)>();

  _Fcomplex cprojf(_Fcomplex _Z) {
    return _cprojf(_Z);
  }

  late final _cprojfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('cprojf');
  late final _cprojf = _cprojfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  double crealf(_Fcomplex _Z) {
    return _crealf(_Z);
  }

  late final _crealfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(_Fcomplex)>>('crealf');
  late final _crealf = _crealfPtr.asFunction<double Function(_Fcomplex)>();

  _Fcomplex csinf(_Fcomplex _Z) {
    return _csinf(_Z);
  }

  late final _csinfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('csinf');
  late final _csinf = _csinfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex csinhf(_Fcomplex _Z) {
    return _csinhf(_Z);
  }

  late final _csinhfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('csinhf');
  late final _csinhf = _csinhfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex csqrtf(_Fcomplex _Z) {
    return _csqrtf(_Z);
  }

  late final _csqrtfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('csqrtf');
  late final _csqrtf = _csqrtfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex ctanf(_Fcomplex _Z) {
    return _ctanf(_Z);
  }

  late final _ctanfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('ctanf');
  late final _ctanf = _ctanfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  _Fcomplex ctanhf(_Fcomplex _Z) {
    return _ctanhf(_Z);
  }

  late final _ctanhfPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex)>>('ctanhf');
  late final _ctanhf = _ctanhfPtr.asFunction<_Fcomplex Function(_Fcomplex)>();

  double normf(_Fcomplex _Z) {
    return _normf(_Z);
  }

  late final _normfPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(_Fcomplex)>>('normf');
  late final _normf = _normfPtr.asFunction<double Function(_Fcomplex)>();

  _Dcomplex _Cbuild(double _Re, double _Im) {
    return __Cbuild(_Re, _Im);
  }

  late final __CbuildPtr =
      _lookup<ffi.NativeFunction<_Dcomplex Function(ffi.Double, ffi.Double)>>(
        '_Cbuild',
      );
  late final __Cbuild = __CbuildPtr
      .asFunction<_Dcomplex Function(double, double)>();

  _Dcomplex _Cmulcc(_Dcomplex _X, _Dcomplex _Y) {
    return __Cmulcc(_X, _Y);
  }

  late final __CmulccPtr =
      _lookup<ffi.NativeFunction<_Dcomplex Function(_Dcomplex, _Dcomplex)>>(
        '_Cmulcc',
      );
  late final __Cmulcc = __CmulccPtr
      .asFunction<_Dcomplex Function(_Dcomplex, _Dcomplex)>();

  _Dcomplex _Cmulcr(_Dcomplex _X, double _Y) {
    return __Cmulcr(_X, _Y);
  }

  late final __CmulcrPtr =
      _lookup<ffi.NativeFunction<_Dcomplex Function(_Dcomplex, ffi.Double)>>(
        '_Cmulcr',
      );
  late final __Cmulcr = __CmulcrPtr
      .asFunction<_Dcomplex Function(_Dcomplex, double)>();

  _Fcomplex _FCbuild(double _Re, double _Im) {
    return __FCbuild(_Re, _Im);
  }

  late final __FCbuildPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(ffi.Float, ffi.Float)>>(
        '_FCbuild',
      );
  late final __FCbuild = __FCbuildPtr
      .asFunction<_Fcomplex Function(double, double)>();

  _Fcomplex _FCmulcc(_Fcomplex _X, _Fcomplex _Y) {
    return __FCmulcc(_X, _Y);
  }

  late final __FCmulccPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex, _Fcomplex)>>(
        '_FCmulcc',
      );
  late final __FCmulcc = __FCmulccPtr
      .asFunction<_Fcomplex Function(_Fcomplex, _Fcomplex)>();

  _Fcomplex _FCmulcr(_Fcomplex _X, double _Y) {
    return __FCmulcr(_X, _Y);
  }

  late final __FCmulcrPtr =
      _lookup<ffi.NativeFunction<_Fcomplex Function(_Fcomplex, ffi.Float)>>(
        '_FCmulcr',
      );
  late final __FCmulcr = __FCmulcrPtr
      .asFunction<_Fcomplex Function(_Fcomplex, double)>();

  void RegisterPort(int port) {
    return _RegisterPort(port);
  }

  late final _RegisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'RegisterPort',
      );
  late final _RegisterPort = _RegisterPortPtr.asFunction<void Function(int)>();

  void UnregisterPort() {
    return _UnregisterPort();
  }

  late final _UnregisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('UnregisterPort');
  late final _UnregisterPort = _UnregisterPortPtr.asFunction<void Function()>();

  void BridgeInit(ffi.Pointer<ffi.Void> api) {
    return _BridgeInit(api);
  }

  late final _BridgeInitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'BridgeInit',
      );
  late final _BridgeInit =
      _BridgeInitPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void Move(int x, int y, int port) {
    return _Move(x, y, port);
  }

  late final _MovePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('Move');
  late final _Move = _MovePtr.asFunction<void Function(int, int, int)>();

  void MoveRelative(int x, int y, int port) {
    return _MoveRelative(x, y, port);
  }

  late final _MoveRelativePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('MoveRelative');
  late final _MoveRelative =
      _MoveRelativePtr.asFunction<void Function(int, int, int)>();

  void Click(ffi.Pointer<ffi.Char> btn, int dbl, int port) {
    return _Click(btn, dbl, port);
  }

  late final _ClickPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.LongLong)
        >
      >('Click');
  late final _Click =
      _ClickPtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int, int)>();

  void Toggle(ffi.Pointer<ffi.Char> btn, ffi.Pointer<ffi.Char> dir, int port) {
    return _Toggle(btn, dir, port);
  }

  late final _TogglePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('Toggle');
  late final _Toggle =
      _TogglePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void Scroll(int x, int y, int port) {
    return _Scroll(x, y, port);
  }

  late final _ScrollPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('Scroll');
  late final _Scroll = _ScrollPtr.asFunction<void Function(int, int, int)>();

  void ScrollDir(int amount, ffi.Pointer<ffi.Char> dir, int port) {
    return _ScrollDir(amount, dir, port);
  }

  late final _ScrollDirPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('ScrollDir');
  late final _ScrollDir =
      _ScrollDirPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Char>, int)
      >();

  void GetLocation(int port) {
    return _GetLocation(port);
  }

  late final _GetLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'GetLocation',
      );
  late final _GetLocation = _GetLocationPtr.asFunction<void Function(int)>();

  void SetMouseSleep(int ms, int port) {
    return _SetMouseSleep(ms, port);
  }

  late final _SetMouseSleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'SetMouseSleep',
      );
  late final _SetMouseSleep =
      _SetMouseSleepPtr.asFunction<void Function(int, int)>();

  void MilliSleep(int ms, int port) {
    return _MilliSleep(ms, port);
  }

  late final _MilliSleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'MilliSleep',
      );
  late final _MilliSleep = _MilliSleepPtr.asFunction<void Function(int, int)>();

  void StopTask(int taskID, int port) {
    return _StopTask(taskID, port);
  }

  late final _StopTaskPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.LongLong, ffi.LongLong)>
      >('StopTask');
  late final _StopTask = _StopTaskPtr.asFunction<void Function(int, int)>();

  int MoveSmoothStart(int x, int y, int port) {
    return _MoveSmoothStart(x, y, port);
  }
